# pyfasttext

./: .gitignore  LICENSE  Makefile  pyproject.toml  shell.nix  tox.ini
